# SmartStudyAssistant

./: .env.example  README.md  app.py  e -Force .git  main.py  pyproject.toml  test.py
models/: concept.py  exam.py  flashcard.py  mcq.py  summary.py
prompts/: concept_prompt.py  exam_prompt.py  flashcard_prompt.py  mcq_prompt.py  summary_prompt.py
services/: llm_service.py  study_service.py
services/providers/: mock_provider.py  openrouter_provider.py
