[project]
name = "smartstudyassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-generativeai>=0.8.6",
    "pandas>=3.0.3",
    "pydantic",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]
